# graphics_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/: scene.json
assets/shaders/: BlinnPhong.frag  BlinnPhong.vert  basic.frag  basic.vert  blinn_phong.frag  blinn_phong.vert  camera.frag  camera.vert  texture.frag  texture.vert
dev_tools/: CountCodeLineNums.py  README.md
shaders/: basic.frag  basic.vert
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: Component.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/core/factory/: ResourceLoaderFactory.cpp  ResourceLoaderFactory.h
src/core/loader/: AssimpModelLoader.cpp  AssimpModelLoader.h  IModelLoader.h  ITextureLoader.h  LodepngTextureLoader.h  StbImageTextureLoader.h
src/core/test/: TestOpenGlRendering.h
src/graphics/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  Camera.cpp  Camera.h  GeometryFactory.cpp  GeometryFactory.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PbrMaterial.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  readme_graphics.md
src/graphics/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
src/graphics/input/: InputManager.cpp  InputManager.h
src/graphics/light/: Light.h
src/graphics/material/: BlinnPhongMaterial.h  Material.cpp  Material.h  PbrMaterial.cpp
src/input/: InputManager.cpp  InputManager.h  README.md
src/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  MeshRenderer.cpp  MeshRenderer.h  Rotation.cpp  Rotation.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/test/: TestBasicRendering.h  TestEnvironment.cpp  TestEnvironment.h  TestLoadPlaneMesh.h  TestManager.cpp  TestManager.h  TestMaterial.h  TestMesh.h  TestModelLoad.h  TestRegistry.cpp  TestRegistry.h  TestTexture.h  readme_test.md
src/test/input/: TestInput.cpp  TestInput.h
src/test/render/: TestLight.cpp  TestLight.h  TestMesh.cpp  TestMesh.h  TestShader.cpp  TestShader.h  TestTexture.cpp  TestTexture.h
src/test/resource/: TestLoadPlaneMesh.cpp  TestLoadPlaneMesh.h  TestModelLoader.cpp  TestModelLoader.h
src/test/scene/: TestSceneManager.cpp  TestSceneManager.h
src/utils/: LogUtil.cpp  LogUtil.h
